--- a/analysis/P-hacking_COVID-19_c.elegans.Rmd
+++ b/analysis/P-hacking_COVID-19_c.elegans.Rmd
@@ -5,6 +5,12 @@ date: "9/15/2020"
 output: html_document
 ---
 
+```{r global_options, include=FALSE}
+# knitr::opts_chunk$set(echo=TRUE, eval=FALSE, warning=FALSE, message=FALSE)
+knitr::opts_chunk$set(error=TRUE, warning=FALSE, message=FALSE)
+
+```
+
 ```{r, message = FALSE}
 library(tidyverse)
 library(utils)
@@ -24,6 +30,8 @@ summary(covid)
 ## P-hacking
 
 Let's use the continent categorical data to see if it has significant impact on the covid-19 cases (for the 14 day period)
+
+## Testing significance of Whether the country is in the America continent
 ```{r continent America}
 #library(qvalue)
 data <- covid
@@ -117,17 +125,15 @@ ggplot(data1, aes_string(x='continentExp',y='Cumulative_number_for_14_days_of_CO
 
 ```
 
-## (1) Results:
+### (1) Results:
 
 In the Asia continent, continent factor had spurious significant correlations in 116 dates (without multiple testing adjustments). We know these dates are spurious because after FDR correction whether the country is in the Asia continent did not show any significant correlation to the number of covid-19 cases.
 
-## (2) Non-statistical argument or explanation:
+### (2) Non-statistical argument or explanation:
 (Argue for an underlying non-statistical explanation for your group’s fake result.)
+In some dates, countries in Asia might have had simultaneous spikes at the same day. Since the days that have significant p-value are all after April, these dates are pretty far from when covid-19 outbroke in China.
 
-
-
-
-## (3) Critique your statistical approach and why your group got an apparently significant p-value.
+### (3) Critique your statistical approach and why your group got an apparently significant p-value.
 
 When using the continent as an independent variable, it would be more accurate to use the p-value of the whole model (not p-value for individual coefficients) in order to test the effect of the continent. 88 dates show significant p-value, and among them 47 dates show significant q-value (FDR corrected p-value). Therefore, we could conclude that even though there are some spurious correlations found due to multiple testing, about half of these 88 dates turns out to be significant. 
 ```{r}
